curses: Recognize ASCII DEL as backspace.

* pinentry/pinentry-curses.c (dialog_input): Recognize ASCII DEL as
backspace.

--
Reported-by chdiza
GnuPG-bug-id: 2020